--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,21 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>dv8ion</id>
+            <name>m2-dv8ion</name>
+            <url>https://m2.dv8tion.net/releases</url>
+        </repository>
+    </repositories>
+
     <dependencies>
+
+        <dependency>
+            <groupId>com.sedmelluq</groupId>
+            <artifactId>lavaplayer</artifactId>
+            <version>1.3.77</version>
+        </dependency>
 
         <dependency>
             <groupId>net.dv8tion</groupId>
